Updated folder structure

--- a/src/frames/index/6.html
+++ b/src/frames/index/6.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with 6</h1>
     <div>Some of the articles that start with 6:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./6/0.html">Anarchy</a></li>
+    <li><a href="./6/1.html">Anchor</a></li>
+    <li><a href="./6/2.html">Anne Boleyn</a></li>
+    <li><a href="./6/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./6/4.html">Antimatter</a></li>
+    <li><a href="./6/5.html">Azithromycin</a></li>
   </body>
 </html>
