--- a/src/frames/index/7.html
+++ b/src/frames/index/7.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with 7</h1>
     <div>Some of the articles that start with 7:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./7/0.html">Anarchy</a></li>
+    <li><a href="./7/1.html">Anchor</a></li>
+    <li><a href="./7/2.html">Anne Boleyn</a></li>
+    <li><a href="./7/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./7/4.html">Antimatter</a></li>
+    <li><a href="./7/5.html">Azithromycin</a></li>
   </body>
 </html>
