--- a/src/frames/index/A.html
+++ b/src/frames/index/A.html
@@ -9,12 +9,12 @@
   <body>
     <h1>Articles starting with A</h1>
     <div>Some of the articles that start with A:</div>
-    <a href="./A/A0.html">Anarchy</a>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./A/0.html">Anarchy</a></li>
+    <li><a href="./A/1.html">Anchor</a></li>
+    <li><a href="./A/2.html">Anne Boleyn</a></li>
+    <li><a href="./A/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./A/4.html">Antimatter</a></li>
+    <li><a href="./A/5.html">Azithromycin</a></li>
   </body>
   <script>
     const { ipcRenderer, remote } = require("electron");
