--- a/src/frames/index/G.html
+++ b/src/frames/index/G.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>UTP</title>
-    <link rel="stylesheet" href="frames-styles.css" />
+    <link rel="stylesheet" href="../frames-styles.css" />
   </head>
 
   <body>
     <h1>Articles starting with G</h1>
     <div>Some of the articles that start with G:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./G/0.html">Anarchy</a></li>
+    <li><a href="./G/1.html">Anchor</a></li>
+    <li><a href="./G/2.html">Anne Boleyn</a></li>
+    <li><a href="./G/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./G/4.html">Antimatter</a></li>
+    <li><a href="./G/5.html">Azithromycin</a></li>
   </body>
 </html>
