--- a/src/frames/index/M.html
+++ b/src/frames/index/M.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with M</h1>
     <div>Some of the articles that start with M:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./M/0.html">Anarchy</a></li>
+    <li><a href="./M/1.html">Anchor</a></li>
+    <li><a href="./M/2.html">Anne Boleyn</a></li>
+    <li><a href="./M/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./M/4.html">Antimatter</a></li>
+    <li><a href="./M/5.html">Azithromycin</a></li>
   </body>
 </html>
