--- a/src/frames/index/O.html
+++ b/src/frames/index/O.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with O</h1>
     <div>Some of the articles that start with O:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./O/0.html">Anarchy</a></li>
+    <li><a href="./O/1.html">Anchor</a></li>
+    <li><a href="./O/2.html">Anne Boleyn</a></li>
+    <li><a href="./O/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./O/4.html">Antimatter</a></li>
+    <li><a href="./O/5.html">Azithromycin</a></li>
   </body>
 </html>
