--- a/src/frames/index/X.html
+++ b/src/frames/index/X.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with X</h1>
     <div>Some of the articles that start with X:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./X/0.html">Anarchy</a></li>
+    <li><a href="./X/1.html">Anchor</a></li>
+    <li><a href="./X/2.html">Anne Boleyn</a></li>
+    <li><a href="./X/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./X/4.html">Antimatter</a></li>
+    <li><a href="./X/5.html">Azithromycin</a></li>
   </body>
 </html>
