--- a/src/frames/index/0.html
+++ b/src/frames/index/0.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with 0</h1>
     <div>Some of the articles that start with 0:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./0/0.html">Anarchy</a></li>
+    <li><a href="./0/1.html">Anchor</a></li>
+    <li><a href="./0/2.html">Anne Boleyn</a></li>
+    <li><a href="./0/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./0/4.html">Antimatter</a></li>
+    <li><a href="./0/5.html">Azithromycin</a></li>
   </body>
 </html>
