--- a/src/frames/index/1.html
+++ b/src/frames/index/1.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with 1</h1>
     <div>Some of the articles that start with 1:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./1/0.html">Anarchy</a></li>
+    <li><a href="./1/1.html">Anchor</a></li>
+    <li><a href="./1/2.html">Anne Boleyn</a></li>
+    <li><a href="./1/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./1/4.html">Antimatter</a></li>
+    <li><a href="./1/5.html">Azithromycin</a></li>
   </body>
 </html>
