--- a/src/frames/index/2.html
+++ b/src/frames/index/2.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with 2</h1>
     <div>Some of the articles that start with 2:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./2/0.html">Anarchy</a></li>
+    <li><a href="./2/1.html">Anchor</a></li>
+    <li><a href="./2/2.html">Anne Boleyn</a></li>
+    <li><a href="./2/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./2/4.html">Antimatter</a></li>
+    <li><a href="./2/5.html">Azithromycin</a></li>
   </body>
 </html>
