--- a/src/frames/index/9.html
+++ b/src/frames/index/9.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with 9</h1>
     <div>Some of the articles that start with 9:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./9/0.html">Anarchy</a></li>
+    <li><a href="./9/1.html">Anchor</a></li>
+    <li><a href="./9/2.html">Anne Boleyn</a></li>
+    <li><a href="./9/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./9/4.html">Antimatter</a></li>
+    <li><a href="./9/5.html">Azithromycin</a></li>
   </body>
 </html>
