--- a/src/frames/index/B.html
+++ b/src/frames/index/B.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with B</h1>
     <div>Some of the articles that start with B:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./B/0.html">Anarchy</a></li>
+    <li><a href="./B/1.html">Anchor</a></li>
+    <li><a href="./B/2.html">Anne Boleyn</a></li>
+    <li><a href="./B/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./B/4.html">Antimatter</a></li>
+    <li><a href="./B/5.html">Azithromycin</a></li>
   </body>
 </html>
