--- a/src/frames/index/C.html
+++ b/src/frames/index/C.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with C</h1>
     <div>Some of the articles that start with C:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./C/0.html">Anarchy</a></li>
+    <li><a href="./C/1.html">Anchor</a></li>
+    <li><a href="./C/2.html">Anne Boleyn</a></li>
+    <li><a href="./C/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./C/4.html">Antimatter</a></li>
+    <li><a href="./C/5.html">Azithromycin</a></li>
   </body>
 </html>
