--- a/src/frames/index/D.html
+++ b/src/frames/index/D.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with D</h1>
     <div>Some of the articles that start with D:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./D/0.html">Anarchy</a></li>
+    <li><a href="./D/1.html">Anchor</a></li>
+    <li><a href="./D/2.html">Anne Boleyn</a></li>
+    <li><a href="./D/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./D/4.html">Antimatter</a></li>
+    <li><a href="./D/5.html">Azithromycin</a></li>
   </body>
 </html>
