--- a/src/frames/index/H.html
+++ b/src/frames/index/H.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with H</h1>
     <div>Some of the articles that start with H:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./H/0.html">Anarchy</a></li>
+    <li><a href="./H/1.html">Anchor</a></li>
+    <li><a href="./H/2.html">Anne Boleyn</a></li>
+    <li><a href="./H/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./H/4.html">Antimatter</a></li>
+    <li><a href="./H/5.html">Azithromycin</a></li>
   </body>
 </html>
