--- a/src/frames/index/I.html
+++ b/src/frames/index/I.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with I</h1>
     <div>Some of the articles that start with I:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./I/0.html">Anarchy</a></li>
+    <li><a href="./I/1.html">Anchor</a></li>
+    <li><a href="./I/2.html">Anne Boleyn</a></li>
+    <li><a href="./I/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./I/4.html">Antimatter</a></li>
+    <li><a href="./I/5.html">Azithromycin</a></li>
   </body>
 </html>
