--- a/src/frames/index/L.html
+++ b/src/frames/index/L.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with L</h1>
     <div>Some of the articles that start with L:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./L/0.html">Anarchy</a></li>
+    <li><a href="./L/1.html">Anchor</a></li>
+    <li><a href="./L/2.html">Anne Boleyn</a></li>
+    <li><a href="./L/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./L/4.html">Antimatter</a></li>
+    <li><a href="./L/5.html">Azithromycin</a></li>
   </body>
 </html>
