--- a/src/frames/index/N.html
+++ b/src/frames/index/N.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with N</h1>
     <div>Some of the articles that start with N:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./N/0.html">Anarchy</a></li>
+    <li><a href="./N/1.html">Anchor</a></li>
+    <li><a href="./N/2.html">Anne Boleyn</a></li>
+    <li><a href="./N/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./N/4.html">Antimatter</a></li>
+    <li><a href="./N/5.html">Azithromycin</a></li>
   </body>
 </html>
