--- a/src/frames/index/S.html
+++ b/src/frames/index/S.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with S</h1>
     <div>Some of the articles that start with S:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./S/0.html">Anarchy</a></li>
+    <li><a href="./S/1.html">Anchor</a></li>
+    <li><a href="./S/2.html">Anne Boleyn</a></li>
+    <li><a href="./S/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./S/4.html">Antimatter</a></li>
+    <li><a href="./S/5.html">Azithromycin</a></li>
   </body>
 </html>
