--- a/src/frames/index/T.html
+++ b/src/frames/index/T.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with T</h1>
     <div>Some of the articles that start with T:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./T/0.html">Anarchy</a></li>
+    <li><a href="./T/1.html">Anchor</a></li>
+    <li><a href="./T/2.html">Anne Boleyn</a></li>
+    <li><a href="./T/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./T/4.html">Antimatter</a></li>
+    <li><a href="./T/5.html">Azithromycin</a></li>
   </body>
 </html>
