--- a/src/frames/index/U.html
+++ b/src/frames/index/U.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with U</h1>
     <div>Some of the articles that start with U:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./U/0.html">Anarchy</a></li>
+    <li><a href="./U/1.html">Anchor</a></li>
+    <li><a href="./U/2.html">Anne Boleyn</a></li>
+    <li><a href="./U/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./U/4.html">Antimatter</a></li>
+    <li><a href="./U/5.html">Azithromycin</a></li>
   </body>
 </html>
