--- a/src/frames/index/W.html
+++ b/src/frames/index/W.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with W</h1>
     <div>Some of the articles that start with W:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./W/0.html">Anarchy</a></li>
+    <li><a href="./W/1.html">Anchor</a></li>
+    <li><a href="./W/2.html">Anne Boleyn</a></li>
+    <li><a href="./W/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./W/4.html">Antimatter</a></li>
+    <li><a href="./W/5.html">Azithromycin</a></li>
   </body>
 </html>
