--- a/src/frames/index/Y.html
+++ b/src/frames/index/Y.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with Y</h1>
     <div>Some of the articles that start with Y:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./Y/0.html">Anarchy</a></li>
+    <li><a href="./Y/1.html">Anchor</a></li>
+    <li><a href="./Y/2.html">Anne Boleyn</a></li>
+    <li><a href="./Y/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./Y/4.html">Antimatter</a></li>
+    <li><a href="./Y/5.html">Azithromycin</a></li>
   </body>
 </html>
