--- a/src/frames/index/Z.html
+++ b/src/frames/index/Z.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Articles starting with Z</h1>
     <div>Some of the articles that start with Z:</div>
-    <div>Anarchy</div>
-    <div>Anchor</div>
-    <div>Anne Boleyn</div>
-    <div>Appellation d'origine contrôlée</div>
-    <div>Antimatter</div>
-    <div>Azithromycin</div>
+    <li><a href="./Z/0.html">Anarchy</a></li>
+    <li><a href="./Z/1.html">Anchor</a></li>
+    <li><a href="./Z/2.html">Anne Boleyn</a></li>
+    <li><a href="./Z/3.html">Appellation d'origine contrôlée</a></li>
+    <li><a href="./Z/4.html">Antimatter</a></li>
+    <li><a href="./Z/5.html">Azithromycin</a></li>
   </body>
 </html>
