Implemented filler dialogs

--- a/src/frames/howtouse.html
+++ b/src/frames/howtouse.html
@@ -8,11 +8,26 @@
 
   <body>
     <h1>How to Use Encyclopaedia Mundi</h1>
-    <div id="typ">
-      <p>To find a topic of your choice in Encyclopaedia Mundi, start by typing in the search bar. Once you click on the Search button, this software will traverse its database and employ state-of-the-art technology to decompress the data. As decompression moves along, the result will be presented to you progressively.</p>
-      <p>If you are simply in a mood of curiosity and do not have a specific topic in mind, we encourage you to explore the index section in sidebar on the left. Click on the plus or minus button to expand or contract the list, then click on the letter or number to explore some of the topics that begins with those characters. Bear in mind that Encyclopaedia Mundi contains more articles than what's listed in the index.</p>
-      <p>If you are feeling especially adventurous, try clicking on the Random Page at the bottom of the sidebar.</p>
-      <p><b>Did you know?</b> Encyclopaedia Mundi (or Encyclopaedīa Mundī if you wish to be orthographically correct) is Latin for World Encyclopaedia, and a Roman would pronounce it like &lsquo;yeen-kee-klo-pae-DYA MOON-dee&rsquo;! If you are a linguaphile, why not search for &lsquo;<a href="">Classical Latin</a>&rsquo; for a start?</p>
-      <p>Have fun, and thanks for using Encyclopaedia Mundi!</p>
+    <p>
+      To find a topic of your choice in Encyclopaedia Mundi, start by typing in
+      the search bar. Once you click on the Search button, this software will
+      traverse its database and employ state-of-the-art technology to decompress
+      the data. As decompression moves along, the result will be presented to
+      you progressively.
+    </p>
+    <p>
+      If you are simply in a mood of curiosity and do not have a specific topic
+      in mind, we encourage you to explore the index section in sidebar on the
+      left. Click on the plus or minus button to expand or contract the list,
+      then click on the letter or number to explore some of the topics that
+      begins with those characters. Bear in mind that Encyclopaedia Mundi
+      contains more articles than what's listed in the index.
+    </p>
+    <p>
+      If you are feeling especially adventurous, try clicking on the Random Page
+      at the bottom of the sidebar.
+    </p>
+
+    <p>Have fun, and thanks for using Encyclopaedia Mundi!</p>
   </body>
 </html>
