--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,9 @@
         <div class="menubar">
           <button disabled>File</button>
           <span class="menubar-padding">&nbsp;</span>
-          <button>Settings</button>
+          <button id="mainMenuSettings">Settings</button>
           <span class="menubar-padding">&nbsp;</span>
-          <button>Debug</button>
+          <button id="mainMenuDebug">Debug</button>
           <span class="menubar-padding">&nbsp;</span>
           <button id="mainMenuDevTools">DevTools</button>
           <span class="menubar-padding">&nbsp;</span>
@@ -74,6 +74,7 @@
         <div id="mainIndexContentContainer">
           <ul class="tree-view" id="mainIndexSection">
             <li id="mainListWelcome">Welcome</li>
+            <li id="mainListNote">Note to Test Users</li>
             <li id="mainListHowToUse">How to use</li>
             <li>
               <details open>
