Updated about page

--- a/src/aboutModal.html
+++ b/src/aboutModal.html
@@ -30,29 +30,32 @@
         </div>
       </div>
       <div class="window-body">
-        <p>Encyclopaedia Mundi</p>
-        <p>Version 0.67</p>
-        <p>
-          1989-1990, 1992 Thibodeau Publishing; 1993-1995, 1998–1999
-          Pitchman-Survoy Inc.
-        </p>
-        <p>Development build. For internal evaluation only.</p>
-        <p>
-          Comments and suggestions should be submitted over intranet at \\encm
-          (you need to be at the office to access this address).
-        </p>
-        <p>
-          All trademarks belong to their respective owners. By using this
-          software, you are agreeing to be bound by the terms and conditions
-          listed in the Licenses page.
-        </p>
-        <hr />
-        <p>This software is licensed to:</p>
-        <p>Internal T. User</p>
-        <section class="field-row" style="justify-content: flex-end">
-          <button id="aMod-license">Licences</button>
-          <button id="aMod-close">OK</button>
-        </section>
+        <div id="aMod-container">
+          <div id="aMod-logo">
+            <image src="./bin/images/appIcon.png"></image>
+          </div>
+          <div id="aMod-content">
+            <p id="aMod-content-el1">Encyclopaedia Mundi</p>
+            <p>Version 0.67</p>
+            <p>
+              1989-1990, 1992 Thibodeau Publishing; 1993-1995, 1998–1999
+              Pitchman-Survoy Inc.
+            </p>
+            <p>Development build. For internal evaluation only.</p>
+            <p>
+              All trademarks belong to their respective owners. By using this
+              software, you are agreeing to be bound by the terms and conditions
+              listed in the Licenses page.
+            </p>
+            <hr />
+            <p>This software is licensed to:</p>
+            <p>Internal T. User</p>
+            <section class="field-row" style="justify-content: flex-end">
+              <button id="aMod-license">Licences</button>
+              <button id="aMod-close">OK</button>
+            </section>
+          </div>
+        </div>
       </div>
     </div>
     <script src="js/aboutModal.js"></script>
