--- a/src/frames/welcome.html
+++ b/src/frames/welcome.html
@@ -27,12 +27,21 @@
       a Roman would pronounce it like &lsquo;yeen-kee-klo-pae-DYA
       MOON-dee&rsquo;! If you are a linguaphile, why not search for &lsquo;<a
         href=""
+        id="class-latin"
         >Classical Latin</a
       >&rsquo; for a start?
     </p>
 
     <!-- <script src="../js/index.js"></script> -->
     <script src="../js/core.js"></script>
+    <script>
+      // const { ipcRenderer } = require("electron");
+      // const classLatin = document.getElementById("class-latin");
+      // console.log("clicked");
+      // classLatin.addEventListener("click", () => {
+      //   ipcRenderer.send("navigate-to", "Classical Latin");
+      // });
+    </script>
     <!-- <script type="text/javascript">
       var typEl = document.getElementById("typ");
       const typewriter = new Typewriter(typEl, {
