--- a/src/licensesplash.html
+++ b/src/licensesplash.html
@@ -2,11 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./css/licensesplash.css" />
+    <link rel="stylesheet" href="./css/licenseSplash.css" />
     <title>LICENSE</title>
   </head>
   <body>
-    
+    <div class="instructions">
+      <span
+        >Click inside this window to exit. Alternatively, press Q or Esc key on
+        your keyboard.</span
+      >
+    </div>
 
     <div class="license-container">
       <h1 id="client">Client</h1>
@@ -259,10 +264,7 @@ If your document contains nontrivial examples of program code, we recommend rele
       </h3>
       <p>
         Image adapted from
-        <a
-          href="https://commons.wikimedia.org/wiki/File:Pierre-Auguste_Renoir_-_Luncheon_of_the_Boating_Party_-_Google_Art_Project.jpg"
-          >https://commons.wikimedia.org/wiki/File:Pierre-Auguste<em>Renoir</em>-<em>Luncheon_of_the_Boating_Party</em>-_Google_Art_Project.jpg</a
-        >.
+        <pre><code>https://commons.wikimedia.org/wiki/File:Pierre-Auguste_Renoir_-_Luncheon_of_the_Boating_Party_-_Google_Art_Project.jpg</code></pre>.
       </p>
       <p>
         With digital modification applied (cropping, scaling, and dithering).
@@ -277,27 +279,7 @@ This file has been identified as being free of known restrictions under copyrigh
 The official position taken by the Wikimedia Foundation is that &quot;faithful reproductions of two-dimensional public domain works of art are public domain&quot;.
 This photographic reproduction is therefore also considered to be in the public domain in the United States. In other jurisdictions, re-use of this content may be restricted; see Reuse of PD-Art photographs for details.
 </code></pre>
-      <h3
-        id="leroy-anderson-and-his-pops-concert-orchestra-the-typewriter-october-1953"
-      >
-        Leroy Anderson And His &quot;Pops&quot; Concert Orchestra - The
-        Typewriter (October 1953)
-      </h3>
-      <p>
-        Audio adapted from
-        <a
-          href="https://archive.org/details/78_the-typewriter_leroy-anderson-and-his-pops-concert-orchestra-leroy-anderson_gbia0013102b"
-          >https://archive.org/details/78_the-typewriter_leroy-anderson-and-his-pops-concert-orchestra-leroy-anderson_gbia0013102b</a
-        >.
-      </p>
-      <p>With digital modification applied (trimming, noise removal).</p>
-      <p>This audio recording was published in October 1953.</p>
-      <p>
-        <strong
-          >(Not going to use it without reinterpretation, wow the copyright
-          lasts forever)</strong
-        >
-      </p>
+      
       <h2 id="fonts">Fonts</h2>
       <h3 id="iosevka">Iosevka</h3>
       <pre><code>Copyright 2015-2021, Renzhi Li (aka. Belleve Invis, belleve@typeof.net)
