--- a/src/settingsModal.html
+++ b/src/settingsModal.html
@@ -12,7 +12,7 @@
   <body>
     <div class="window">
       <div class="title-bar" id="debugModalTitleBar">
-        <div class="title-bar-text">Unavailable</div>
+        <div class="title-bar-text">Settings Unavailable</div>
 
         <div class="title-bar-controls">
           <!-- <button aria-label="Minimize" id="minimiseWindow" style="-webkit-app-region: no-drag"></button> -->
