Implemented random page

--- a/LICENSE.html
+++ b/LICENSE.html
@@ -244,7 +244,7 @@ If you have Invariant Sections without Cover Texts, or some other combination of
 If your document contains nontrivial examples of program code, we recommend releasing these examples in parallel under your choice of free software license, such as the GNU General Public License, to permit their use in free software.
 </code></pre>
 <h3 id="pierre-auguste-renoir-luncheon-of-the-boating-party-1881">Pierre-Auguste Renoir - Luncheon of the Boating Party (1881)</h3>
-<p>Image adapted from <a href="https://commons.wikimedia.org/wiki/File:Pierre-Auguste_Renoir_-_Luncheon_of_the_Boating_Party_-_Google_Art_Project.jpg">https://commons.wikimedia.org/wiki/File:Pierre-Auguste<em>Renoir</em>-<em>Luncheon_of_the_Boating_Party</em>-_Google_Art_Project.jpg</a>.</p>
+<p>Image adapted from <code>https://commons.wikimedia.org/wiki/File:Pierre-Auguste_Renoir_-_Luncheon_of_the_Boating_Party_-_Google_Art_Project.jpg</code></p>
 <p>With digital modification applied (cropping, scaling, and dithering).</p>
 <pre><code>This is a faithful photographic reproduction of a two-dimensional, public domain work of art. The work of art itself is in the public domain for the following reason:
 Public domain
@@ -256,11 +256,6 @@ This file has been identified as being free of known restrictions under copyrigh
 The official position taken by the Wikimedia Foundation is that &quot;faithful reproductions of two-dimensional public domain works of art are public domain&quot;.
 This photographic reproduction is therefore also considered to be in the public domain in the United States. In other jurisdictions, re-use of this content may be restricted; see Reuse of PD-Art photographs for details.
 </code></pre>
-<h3 id="leroy-anderson-and-his-pops-concert-orchestra-the-typewriter-october-1953">Leroy Anderson And His &quot;Pops&quot; Concert Orchestra - The Typewriter (October 1953)</h3>
-<p>Audio adapted from <a href="https://archive.org/details/78_the-typewriter_leroy-anderson-and-his-pops-concert-orchestra-leroy-anderson_gbia0013102b">https://archive.org/details/78_the-typewriter_leroy-anderson-and-his-pops-concert-orchestra-leroy-anderson_gbia0013102b</a>.</p>
-<p>With digital modification applied (trimming, noise removal).</p>
-<p>This audio recording was published in October 1953.</p>
-<p><strong>(Not going to use it without reinterpretation, wow the copyright lasts forever)</strong></p>
 <h2 id="fonts">Fonts</h2>
 <h3 id="iosevka">Iosevka</h3>
 <pre><code>Copyright 2015-2021, Renzhi Li (aka. Belleve Invis, belleve@typeof.net)
@@ -455,7 +450,7 @@ exhaustive, and do not form part of our licenses.
      such as asking that all changes be marked or described.
      Although not required by our licenses, you are encouraged to
      respect those requests where reasonable. More_considerations
-     for the public: 
+     for the public:
 	wiki.creativecommons.org/Considerations_for_licensees
 
 =======================================================================
@@ -2443,6 +2438,17 @@ The externally maintained libraries used by Node.js are:
 <h2 id="packages">Packages</h2>
 <h3 id="css">98.css</h3>
 <pre><code>Copyright 2020 Jordan Scales
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the &quot;Software&quot;), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+</code></pre>
+<h3 id="is-reachable">is-reachable</h3>
+<pre><code>MIT License
+
+Copyright (c) Sindre Sorhus &lt;sindresorhus@gmail.com&gt; (https://sindresorhus.com)
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the &quot;Software&quot;), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
