--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>UTP</title>
+    <title>Encyclopaedia Mundi</title>
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/global.css" />
     <!-- <link rel="stylesheet" href="../node_modules/98.css/style.css" /> -->
@@ -144,21 +144,6 @@
                       </ul>
                     </details>
                   </li>
-                  <li>
-                    <details>
-                      <summary>Symbol</summary>
-                      <ul>
-                        <li id="mainindexPeriod">. (Period)</li>
-                        <li id="mainindexAmpersand">& (Ampersand)</li>
-                        <li id="mainindexPound"># (Number/Pound)</li>
-                        <li id="mainindexAt">@ (At)</li>
-                        <li id="mainindexPercentage">% (Percentage)</li>
-                        <li id="mainindexPlus">+ (Plus)</li>
-                        <li id="mainindexEqual">&equals; (Equal)</li>
-                        <li id="mainindexOthers">(Others)</li>
-                      </ul>
-                    </details>
-                  </li>
                   <li id="mainindexNonAN">Symbol</li>
                 </ul>
               </details>
@@ -172,7 +157,7 @@
                 </ul>
               </details>
             </li> -->
-            <li>Random Page</li>
+            <li id="mainListRandomPage">Random Page</li>
             <!-- <li>Licenses</li> -->
           </ul>
 
