--- a/src/settingsModal.html
+++ b/src/settingsModal.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>UTP</title>
+    <title>Encyclopaedia Mundi</title>
     <link rel="stylesheet" href="css/settingsModal.css" />
     <link rel="stylesheet" href="css/global.css" />
     <!-- <link rel="stylesheet" href="../node_modules/98.css/style.css"> -->
