--- a/src/splash.html
+++ b/src/splash.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/splash.css" />
-    <title>UTP</title>
+    <title>Encyclopaedia Mundi</title>
   </head>
   <body>
     <img src="bin/images/splashscreen.jpg" />
