--- a/src/aboutModal.html
+++ b/src/aboutModal.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>UTP</title>
+    <title>Encyclopaedia Mundi</title>
     <link rel="stylesheet" href="css/aboutModal.css" />
     <link rel="stylesheet" href="css/global.css" />
     <!-- <link rel="stylesheet" href="../node_modules/98.css/style.css"> -->
@@ -36,12 +36,12 @@
           </div>
           <div id="aMod-content">
             <p id="aMod-content-el1">Encyclopaedia Mundi</p>
-            <p>Version 0.67</p>
+            <p>Version 0.618.0</p>
             <p>
-              1989-1990, 1992 Thibodeau Publishing; 1993-1995, 1998–1999
-              Pitchman-Survoy Inc.
+              1989-1991 Thibodeau Publishing; 1993, 1995–1997 Pitchman-Survoy
+              Inc.
             </p>
-            <p>Development build. For internal evaluation only.</p>
+            <p>Development build. Confidential–For internal evaluation only.</p>
             <p>
               All trademarks belong to their respective owners. By using this
               software, you are agreeing to be bound by the terms and conditions
