--- a/src/crcModal.html
+++ b/src/crcModal.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Encyclopaedia Mundi</title>
-    <link rel="stylesheet" href="css/quitModal.css" />
+    <link rel="stylesheet" href="css/crcModal.css" />
     <link rel="stylesheet" href="css/global.css" />
     <!-- <link rel="stylesheet" href="../node_modules/98.css/style.css"> -->
     <link rel="stylesheet" href="./css/98css/style.css" />
@@ -11,8 +11,8 @@
 
   <body>
     <div class="window">
-      <div class="title-bar" id="quitModalTitleBar">
-        <div class="title-bar-text">Encyclopaedia Mundi</div>
+      <div class="title-bar" id="crcModalTitleBar">
+        <div class="title-bar-text">CRC Failed</div>
 
         <div class="title-bar-controls">
           <!-- <button aria-label="Minimize" id="minimiseWindow" style="-webkit-app-region: no-drag"></button> -->
@@ -25,13 +25,20 @@
         </div>
       </div>
       <div class="window-body">
-        <p>Do you want to exit Encyclopaedia Mundi?</p>
+        <p>
+          Failed to validate the integrity of internal database (CRC fault).
+        </p>
+        <p>
+          This usually indicates that a part of the internal database may be
+          damaged. Please inform your supervisor for potential fixes. The
+          application may still be functional, but part of the database may not
+          be accessible.
+        </p>
         <section class="field-row" style="justify-content: flex-end">
-          <button id="qMod-quit">OK</button>
-          <button id="qMod-cancel">Cancel</button>
+          <button id="cMod-cancel">OK</button>
         </section>
       </div>
     </div>
-    <script src="js/quitModal.js"></script>
+    <script src="js/crcModal.js"></script>
   </body>
 </html>
