--- a/src/frames/welcome.html
+++ b/src/frames/welcome.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>UTP</title>
+    <title>Encyclopaedia Mundi</title>
     <link rel="stylesheet" href="frames-styles.css" />
   </head>
 
