--- a/src/licensesplash.html
+++ b/src/licensesplash.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./css/licenseSplash.css" />
-    <title>LICENSE</title>
+    <title>Encyclopaedia Mundi</title>
   </head>
   <body>
     <div class="instructions">
@@ -264,7 +264,9 @@ If your document contains nontrivial examples of program code, we recommend rele
       </h3>
       <p>
         Image adapted from
-        <pre><code>https://commons.wikimedia.org/wiki/File:Pierre-Auguste_Renoir_-_Luncheon_of_the_Boating_Party_-_Google_Art_Project.jpg</code></pre>.
+        <code
+          >https://commons.wikimedia.org/wiki/File:Pierre-Auguste_Renoir_-_Luncheon_of_the_Boating_Party_-_Google_Art_Project.jpg</code
+        >
       </p>
       <p>
         With digital modification applied (cropping, scaling, and dithering).
@@ -279,7 +281,6 @@ This file has been identified as being free of known restrictions under copyrigh
 The official position taken by the Wikimedia Foundation is that &quot;faithful reproductions of two-dimensional public domain works of art are public domain&quot;.
 This photographic reproduction is therefore also considered to be in the public domain in the United States. In other jurisdictions, re-use of this content may be restricted; see Reuse of PD-Art photographs for details.
 </code></pre>
-      
       <h2 id="fonts">Fonts</h2>
       <h3 id="iosevka">Iosevka</h3>
       <pre><code>Copyright 2015-2021, Renzhi Li (aka. Belleve Invis, belleve@typeof.net)
@@ -479,7 +480,7 @@ exhaustive, and do not form part of our licenses.
      such as asking that all changes be marked or described.
      Although not required by our licenses, you are encouraged to
      respect those requests where reasonable. More_considerations
-     for the public: 
+     for the public:
 	wiki.creativecommons.org/Considerations_for_licensees
 
 =======================================================================
@@ -2467,6 +2468,17 @@ The externally maintained libraries used by Node.js are:
       <h2 id="packages">Packages</h2>
       <h3 id="css">98.css</h3>
       <pre><code>Copyright 2020 Jordan Scales
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the &quot;Software&quot;), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+</code></pre>
+      <h3 id="is-reachable">is-reachable</h3>
+      <pre><code>MIT License
+
+Copyright (c) Sindre Sorhus &lt;sindresorhus@gmail.com&gt; (https://sindresorhus.com)
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the &quot;Software&quot;), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
