Implemented CLI flags

--- a/src/licensesplash.html
+++ b/src/licensesplash.html
@@ -2855,7 +2855,7 @@ limitations under the License.
 </code></pre>
     </div>
   </body>
-  <script src="js/licensesplash.js"></script>
+  <script src="js/licenseSplash.js"></script>
   <!-- <script>
     const audioContext = new AudioContext();
     audioContext.crossOrigin = "anonymous";
