--- a/src/crcModal.html
+++ b/src/crcModal.html
@@ -12,7 +12,7 @@
   <body>
     <div class="window">
       <div class="title-bar" id="crcModalTitleBar">
-        <div class="title-bar-text">CRC Failed</div>
+        <div class="title-bar-text">CRC Fault</div>
 
         <div class="title-bar-controls">
           <!-- <button aria-label="Minimize" id="minimiseWindow" style="-webkit-app-region: no-drag"></button> -->
