Fixed screen flickering

--- a/LICENSE.html
+++ b/LICENSE.html
@@ -256,6 +256,9 @@ This file has been identified as being free of known restrictions under copyrigh
 The official position taken by the Wikimedia Foundation is that &quot;faithful reproductions of two-dimensional public domain works of art are public domain&quot;.
 This photographic reproduction is therefore also considered to be in the public domain in the United States. In other jurisdictions, re-use of this content may be restricted; see Reuse of PD-Art photographs for details.
 </code></pre>
+<h3 id="keita-hoshihudson-soft-aldynes-stage-4-1991">Keita Hoshi/Hudson Soft - Aldynes (Stage 4) (1991)</h3>
+<p>Audio adapted from the Stage 4 background music of Aldynes, a PC Engine SuperGrafx game published by Hudson Soft in 1991. This soundtrack was originally composed by Keita Hoshi.</p>
+<p>The audio used in this project was roughly transcribed from YouTube video <code>https://www.youtube.com/watch?v=PfK6Idj4LBc</code> with different instruments applied.</p>
 <h2 id="fonts">Fonts</h2>
 <h3 id="iosevka">Iosevka</h3>
 <pre><code>Copyright 2015-2021, Renzhi Li (aka. Belleve Invis, belleve@typeof.net)
