--- a/src/crcModal.html
+++ b/src/crcModal.html
@@ -29,10 +29,10 @@
           Failed to validate the integrity of internal database (CRC fault).
         </p>
         <p>
-          This usually indicates that a part of the internal database may be
-          damaged. Please inform your supervisor for potential fixes. The
-          application may still be functional, but part of the database may not
-          be accessible.
+          This usually indicates that a part of the internal database may have
+          been damaged. Please inform your supervisor to acquire an updated
+          file. The application may still be functional, but part of the
+          database may not be accessible.
         </p>
         <section class="field-row" style="justify-content: flex-end">
           <button id="cMod-cancel">OK</button>
