--- a/src/frames/crc.html
+++ b/src/frames/crc.html
@@ -10,10 +10,11 @@
     <h1>Cannot display content</h1>
     <div>
       This content cannot be retrieved as the main database may had been
-      partially damaged. Please inform your supervisor for potential fixes.
-      <br /><br />Entries listed in the side bar (except for the Random Page)
-      are stored in a separate database, so they are not affected. Please try
-      reading some of those instead.
+      partially damaged. Please inform your supervisor to acquire an updated
+      file.
+      <br /><br />In the meantime: entries listed in the side bar (except for
+      Random Page) are stored in a separate database, so they are not affected.
+      Please try reading some of those instead.
     </div>
     <!-- <button>Test</button> -->
   </body>
