--- a/src/aboutModal.html
+++ b/src/aboutModal.html
@@ -32,11 +32,11 @@
       <div class="window-body">
         <div id="aMod-container">
           <div id="aMod-logo">
-            <image src="./bin/images/appIcon.png"></image>
+            <image id="aMod-logo-img" src="./bin/images/appIcon.png"></image>
           </div>
           <div id="aMod-content">
             <p id="aMod-content-el1">Encyclopaedia Mundi</p>
-            <p>Version 0.618.0</p>
+            <p id="aMod-content-version">Version 0.618.0</p>
             <p>
               1989-1991 Thibodeau Publishing; 1993, 1995–1997 Pitchman-Survoy
               Inc.
