Changed dispaly speed for precomputed content

--- a/src/frames/index/0.html
+++ b/src/frames/index/0.html
@@ -9,11 +9,16 @@
   <body>
     <h1>Articles starting with 0</h1>
     <div>Some of the articles that start with 0:</div>
-    <li><a href="./0/0.html">Anarchy</a></li>
-    <li><a href="./0/1.html">Anchor</a></li>
-    <li><a href="./0/2.html">Anne Boleyn</a></li>
-    <li><a href="./0/3.html">Appellation d'origine contrôlée</a></li>
-    <li><a href="./0/4.html">Antimatter</a></li>
-    <li><a href="./0/5.html">Azithromycin</a></li>
+    <li><a href="./0/0.html" draggable="false">0% apr</a></li>
+    <li><a href="./0/1.html" draggable="false">0.0254 m</a></li>
+    <li><a href="./0/2.html" draggable="false">0,10 Exhibition</a></li>
+    <li><a href="./0/3.html" draggable="false">0-3-0</a></li>
+    <li><a href="./0/4.html" draggable="false">0.35 process</a></li>
+    <li><a href="./0/5.html" draggable="false">0-6-0PT</a></li>
+    <li><a href="./0/6.html" draggable="false">0 to 60 mph</a></li>
+    <li><a href="./0/7.html" draggable="false">0–9 Series</a></li>
+    <li><a href="./0/8.html" draggable="false">0.999...</a></li>
+    <li><a href="./0/9.html" draggable="false">0-dimensional space</a></li>
+    <li><a href="./0/10.html" draggable="false">0-point energy</a></li>
   </body>
 </html>
