--- a/src/frames/welcome.html
+++ b/src/frames/welcome.html
@@ -28,6 +28,7 @@
       MOON-dee&rsquo;! If you are a linguaphile, why not search for &lsquo;<a
         href=""
         id="class-latin"
+        draggable="false"
         >Classical Latin</a
       >&rsquo; for a start?
     </p>
