--- a/src/frames/index/7.html
+++ b/src/frames/index/7.html
@@ -9,11 +9,13 @@
   <body>
     <h1>Articles starting with 7</h1>
     <div>Some of the articles that start with 7:</div>
-    <li><a href="./7/0.html">Anarchy</a></li>
-    <li><a href="./7/1.html">Anchor</a></li>
-    <li><a href="./7/2.html">Anne Boleyn</a></li>
-    <li><a href="./7/3.html">Appellation d'origine contrôlée</a></li>
-    <li><a href="./7/4.html">Antimatter</a></li>
-    <li><a href="./7/5.html">Azithromycin</a></li>
+    <li><a href="./7/0.html" draggable="false">Anarchy</a></li>
+    <li><a href="./7/1.html" draggable="false">Anchor</a></li>
+    <li><a href="./7/2.html" draggable="false">Anne Boleyn</a></li>
+    <li>
+      <a href="./7/3.html" draggable="false">Appellation d'origine contrôlée</a>
+    </li>
+    <li><a href="./7/4.html" draggable="false">Antimatter</a></li>
+    <li><a href="./7/5.html" draggable="false">Azithromycin</a></li>
   </body>
 </html>
