--- a/src/frames/index/D.html
+++ b/src/frames/index/D.html
@@ -9,11 +9,13 @@
   <body>
     <h1>Articles starting with D</h1>
     <div>Some of the articles that start with D:</div>
-    <li><a href="./D/0.html">Anarchy</a></li>
-    <li><a href="./D/1.html">Anchor</a></li>
-    <li><a href="./D/2.html">Anne Boleyn</a></li>
-    <li><a href="./D/3.html">Appellation d'origine contrôlée</a></li>
-    <li><a href="./D/4.html">Antimatter</a></li>
-    <li><a href="./D/5.html">Azithromycin</a></li>
+    <li><a href="./D/0.html" draggable="false">Anarchy</a></li>
+    <li><a href="./D/1.html" draggable="false">Anchor</a></li>
+    <li><a href="./D/2.html" draggable="false">Anne Boleyn</a></li>
+    <li>
+      <a href="./D/3.html" draggable="false">Appellation d'origine contrôlée</a>
+    </li>
+    <li><a href="./D/4.html" draggable="false">Antimatter</a></li>
+    <li><a href="./D/5.html" draggable="false">Azithromycin</a></li>
   </body>
 </html>
