--- a/src/frames/index/F.html
+++ b/src/frames/index/F.html
@@ -9,11 +9,13 @@
   <body>
     <h1>Articles starting with F</h1>
     <div>Some of the articles that start with F:</div>
-    <li><a href="./F/0.html">Anarchy</a></li>
-    <li><a href="./F/1.html">Anchor</a></li>
-    <li><a href="./F/2.html">Anne Boleyn</a></li>
-    <li><a href="./F/3.html">Appellation d'origine contrôlée</a></li>
-    <li><a href="./F/4.html">Antimatter</a></li>
-    <li><a href="./F/5.html">Azithromycin</a></li>
+    <li><a href="./F/0.html" draggable="false">Anarchy</a></li>
+    <li><a href="./F/1.html" draggable="false">Anchor</a></li>
+    <li><a href="./F/2.html" draggable="false">Anne Boleyn</a></li>
+    <li>
+      <a href="./F/3.html" draggable="false">Appellation d'origine contrôlée</a>
+    </li>
+    <li><a href="./F/4.html" draggable="false">Antimatter</a></li>
+    <li><a href="./F/5.html" draggable="false">Azithromycin</a></li>
   </body>
 </html>
