--- a/src/frames/index/H.html
+++ b/src/frames/index/H.html
@@ -9,11 +9,13 @@
   <body>
     <h1>Articles starting with H</h1>
     <div>Some of the articles that start with H:</div>
-    <li><a href="./H/0.html">Anarchy</a></li>
-    <li><a href="./H/1.html">Anchor</a></li>
-    <li><a href="./H/2.html">Anne Boleyn</a></li>
-    <li><a href="./H/3.html">Appellation d'origine contrôlée</a></li>
-    <li><a href="./H/4.html">Antimatter</a></li>
-    <li><a href="./H/5.html">Azithromycin</a></li>
+    <li><a href="./H/0.html" draggable="false">Anarchy</a></li>
+    <li><a href="./H/1.html" draggable="false">Anchor</a></li>
+    <li><a href="./H/2.html" draggable="false">Anne Boleyn</a></li>
+    <li>
+      <a href="./H/3.html" draggable="false">Appellation d'origine contrôlée</a>
+    </li>
+    <li><a href="./H/4.html" draggable="false">Antimatter</a></li>
+    <li><a href="./H/5.html" draggable="false">Azithromycin</a></li>
   </body>
 </html>
