--- a/src/frames/index/Symbol.html
+++ b/src/frames/index/Symbol.html
@@ -9,11 +9,15 @@
   <body>
     <h1>Articles starting with a Symbol</h1>
     <div>Some of the articles that start with a Symbol:</div>
-    <li><a href="./Symbol/0.html">Anarchy</a></li>
-    <li><a href="./Symbol/1.html">Anchor</a></li>
-    <li><a href="./Symbol/2.html">Anne Boleyn</a></li>
-    <li><a href="./Symbol/3.html">Appellation d'origine contrôlée</a></li>
-    <li><a href="./Symbol/4.html">Antimatter</a></li>
-    <li><a href="./Symbol/5.html">Azithromycin</a></li>
+    <li><a href="./Symbol/0.html" draggable="false">Anarchy</a></li>
+    <li><a href="./Symbol/1.html" draggable="false">Anchor</a></li>
+    <li><a href="./Symbol/2.html" draggable="false">Anne Boleyn</a></li>
+    <li>
+      <a href="./Symbol/3.html" draggable="false"
+        >Appellation d'origine contrôlée</a
+      >
+    </li>
+    <li><a href="./Symbol/4.html" draggable="false">Antimatter</a></li>
+    <li><a href="./Symbol/5.html" draggable="false">Azithromycin</a></li>
   </body>
 </html>
