--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,9 @@
           <button id="mainMenuDebug">Debug</button>
           <span class="menubar-padding">&nbsp;</span>
           <button id="mainMenuDevTools">DevTools</button>
-          <span class="menubar-padding">&nbsp;</span>
+          <span class="menubar-padding" id="mainMenuDevToolsPadding"
+            >&nbsp;</span
+          >
           <button id="mainMenuHelp">Help</button>
           <span class="menubar-padding">&nbsp;</span>
           <button id="mainMenuAbout">About</button>
